--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "build": "babel ./src --extensions '.ts,.js' -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "HooriRn",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.2",
     "@babel/node": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6"
+    "@babel/preset-typescript": "^7.18.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
