--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios-retry": "^3.3.1",
     "bech32-buffer": "^0.2.1",
     "bignumber.js": "^9.1.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "set-interval-async": "^3.0.2"
   },
   "scripts": {
     "start": "npm run build && node dist/index.js",
