--- a/package.json
+++ b/package.json
@@ -4,21 +4,37 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@cosmos-client/core": "^0.45.1",
-    "@xchainjs/xchain-client": "^0.13.2",
-    "@xchainjs/xchain-cosmos": "^0.20.3",
-    "@xchainjs/xchain-crypto": "^0.2.6",
-    "@xchainjs/xchain-midgard": "^0.2.0",
+    "@xchainjs/xchain-avax": "latest",
+    "@xchainjs/xchain-binance": "latest",
+    "@xchainjs/xchain-bitcoin": "latest",
+    "@xchainjs/xchain-bitcoincash": "latest",
+    "@xchainjs/xchain-bsc": "latest",
+    "@xchainjs/xchain-client": "latest",
+    "@xchainjs/xchain-cosmos": "latest",
+    "@xchainjs/xchain-crypto": "latest",
+    "@xchainjs/xchain-doge": "latest",
+    "@xchainjs/xchain-ethereum": "latest",
+    "@xchainjs/xchain-evm": "latest",
+    "@xchainjs/xchain-litecoin": "latest",
+    "@xchainjs/xchain-midgard": "latest",
     "@xchainjs/xchain-thorchain": "latest",
-    "@xchainjs/xchain-thorchain-query": "^0.1.6",
-    "@xchainjs/xchain-thornode": "^0.1.1",
-    "@xchainjs/xchain-util": "^0.11.0",
-    "axios": "^1.1.3",
-    "axios-retry": "^3.3.1",
-    "bech32-buffer": "^0.2.1",
+    "@xchainjs/xchain-thornode": "latest",
+    "@xchainjs/xchain-util": "latest",
+    "@xchainjs/xchain-thorchain-query": "latest",
+    "@xchainjs/xchain-thorchain-amm": "latest",
+    "@binance-chain/javascript-sdk": "^4.2.0",
+    "@cosmos-client/core": "^0.46.1",
+    "@psf/bitcoincashjs-lib": "^4.0.2",
+    "bchaddrjs": "^0.5.2",
+    "bech32-buffer": "^0.2.0",
+    "ethers": "^5.6.6",    
+    "bitcoinjs-lib": "^6.0.1",
     "bignumber.js": "^9.1.0",
+    "axios": "^1.3.6",
+    "axios-retry": "^3.3.1",
     "dotenv": "^16.0.3",
-    "set-interval-async": "^3.0.2"
+    "set-interval-async": "^3.0.2",
+    "prompts": "^2.4.2"
   },
   "scripts": {
     "start": "npm run build && node dist/index.js",
