--- a/package.json
+++ b/package.json
@@ -4,39 +4,48 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@xchainjs/xchain-avax": "latest",
-    "@xchainjs/xchain-binance": "latest",
-    "@xchainjs/xchain-bitcoin": "latest",
-    "@xchainjs/xchain-bitcoincash": "latest",
-    "@xchainjs/xchain-bsc": "latest",
-    "@xchainjs/xchain-client": "latest",
-    "@xchainjs/xchain-cosmos": "latest",
-    "@xchainjs/xchain-crypto": "latest",
-    "@xchainjs/xchain-doge": "latest",
-    "@xchainjs/xchain-ethereum": "latest",
-    "@xchainjs/xchain-evm": "latest",
-    "@xchainjs/xchain-litecoin": "latest",
-    "@xchainjs/xchain-midgard": "latest",
-    "@xchainjs/xchain-thorchain": "latest",
-    "@xchainjs/xchain-thornode": "latest",
-    "@xchainjs/xchain-util": "latest",
-    "@xchainjs/xchain-thorchain-query": "latest",
-    "@xchainjs/xchain-thorchain-amm": "latest",
     "@binance-chain/javascript-sdk": "^4.2.0",
-    "@cosmos-client/core": "^0.46.1",
-    "@psf/bitcoincashjs-lib": "^4.0.2",
-    "bchaddrjs": "^0.5.2",
-    "bech32-buffer": "^0.2.0",
-    "ethers": "^5.6.6",    
-    "bitcoinjs-lib": "^6.0.1",
-    "bignumber.js": "^9.1.0",
+    "@cosmos-client/core": "0.46.1",
+    "@psf/bitcoincashjs-lib": "^4.0.3",
+    "@xchainjs/xchain-avax": "^0.3.5",
+    "@xchainjs/xchain-bsc": "^0.3.5",
+    "@xchainjs/xchain-client": "0.15.2",
+    "@xchainjs/xchain-ethereum": "0.30.6",
+    "@xchainjs/xchain-evm": "0.3.6",
+    "@xchainjs/xchain-evm-providers": "0.1.2",
+    "@xchainjs/xchain-midgard-query": "0.6.10",
+    "@xchainjs/xchain-thorchain-amm":  "0.7.14",
+    "@xchainjs/xchain-thorchain-query": "0.6.8",
+    "@xchainjs/xchain-binance": "^5.7.4",
+    "@xchainjs/xchain-bitcoin": "^0.23.2",
+    "@xchainjs/xchain-bitcoincash": "^0.17.2",
+    "@xchainjs/xchain-cosmos": "^0.21.6",
+    "@xchainjs/xchain-crypto": "^0.3.0",
+    "@xchainjs/xchain-doge": "^0.7.3",
+    "@xchainjs/xchain-litecoin": "^0.13.2",
+    "@xchainjs/xchain-mayachain": "^0.2.8",
+    "@xchainjs/xchain-midgard": "^0.5.2",
+    "@xchainjs/xchain-thorchain": "^0.28.10",
+    "@xchainjs/xchain-thornode": "^0.3.8",
+    "@xchainjs/xchain-util": "^0.13.1",
+    "@xchainjs/xchain-utxo-providers": "^0.2.5",
     "axios": "^1.3.6",
-    "axios-retry": "^3.3.1",
-    "dotenv": "^16.0.3",
+    "axios-retry": "^3.2.5",
+    "bchaddrjs": "^0.5.2",
+    "bech32": "^2.0.0",
+    "bech32-buffer": "^0.2.0",
+    "bignumber.js": "^9.0.0",
+    "bitcoinjs-lib": "5.2.0",
+    "coininfo": "^5.1.0",
+    "coinselect": "^3.1.12",
+    "dotenv": "^16.0.0",
+    "ethers": "^5.6.6",
+    "prompts": "^2.4.2",
     "set-interval-async": "^3.0.2",
-    "prompts": "^2.4.2"
+    "wif": "^2.0.6"
   },
   "scripts": {
+    "set-env": "export $(cat .env | grep \"^[^#;]\" |xargs)",
     "start": "npm run build && node dist/index.js",
     "build": "babel ./src --extensions '.ts,.js' -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
